--- a/renderer/style.css
+++ b/renderer/style.css
@@ -1,26 +1,72 @@
-body {
-    background-color: rgb(56, 56, 56);
+:root {
+    --font-family: arial, sans-serif;
+    --background-color: rgb(82, 82, 82);
+    --white: rgb(214, 214, 214);
+    --green: rgb(36, 139, 36);
+}
+
+html, body {
+    margin: 0;
+    padding: 0%;
+    width: 100%;
+    height: 100%;
+    background-color: var(--background-color);
     cursor: default;
 }
 
-h1 {
-    color: rgb(212, 212, 212);
-    text-align: center;
-    font-weight: bolder;
-    margin-top: 20px;
+#title-bar {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    align-items: center;
+    background-color:  var(--background-color);
+    color: white;
+    -webkit-app-region: drag; /* Make title bar draggable */
 }
 
+#title-text{
+    font-family: var(--font-family);
+    font-size: 20px;
+}
+
+#title-icon {
+    margin-left: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+#window-controls {
+    display: flex;
+    -webkit-app-region: no-drag; /* Exclude window controls from draggable area */
+}
+
+#window-controls button {
+    background-color: var(--background-color);
+    border: none;
+    color: white;
+    padding: 10px;
+    cursor: pointer;
+}
+
+#window-controls button:hover {
+    background-color: #5f5f5f;
+}
 
 h2 {
-    color: rgb(214, 214, 214);
+    color: var(--white);
     margin-right: 10%;
 }
 
 
 #status {
-    margin-left: 20px;
+    background-color: rgb(73, 73, 73);
+    padding: 8px;
+    width: 90%;
+    border-radius: 10px;
+    margin-top: 20px;
     display: flex;
     justify-content: center;
+    transform: translate(4%, 0);
 }
 
 .statusIndicators {
@@ -68,25 +114,7 @@ h2 {
     color: black;
 }
 
-.button-wrap {
-    position: relative;
-    top: 0px;
-}
 
-.button {
-    background-color: rgb(78, 148, 214);
-    color: aliceblue;
-    padding: 6px 10px;
-    border: 0;
-    border-radius: 7px;
-    font-size: 17px;
-    cursor: pointer;
-}
-
-.button:hover {
-    background-color: yellow;
-    color: black;
-}
 
 #path {
     position: fixed;
@@ -101,13 +129,14 @@ h2 {
     flex-direction: column;
     align-items: left;
     justify-content: center;
-    margin-top: 0px;
+    width: 92%;
+    transform: translate(4%, 0);
     position: relative;
 }
 
 #APItokenTitle {
     position: static;
-    color: rgb(211, 211, 211);
+    color: var(--white);
     font-size: 20px;
     background-color: rgb(73, 73, 73);
     padding: 8px;
@@ -117,8 +146,8 @@ h2 {
 #APItoken {
     position: absolute;
     top: 23px;
-    left: 140px;
-    width: 60%;
+    left: 110px;
+    width: 61%;
     padding: 6px;
     margin-top: 10px;
     border-radius: 10px;
@@ -139,12 +168,14 @@ h2 {
     background-color: rgb(73, 73, 73);
     padding: 8px;
     border-radius: 10px;
+    width: 89%;
+    transform: translate(4%, 0);
 }
 
 #FIRselect {
     position: relative;
     top: -62px;
-    left: 120px;
+    left: 130px;
     width: 15%;
     padding: 6px;
     margin-top: 10px;
@@ -162,8 +193,8 @@ h2 {
 #airportSelect {
     position: relative;
     top: -62px;
-    left: 120px;
-    width: 50%;
+    left: 130px;
+    width: 40%;
     padding: 6px;
     margin-top: 10px;
     border-radius: 10px;
@@ -176,7 +207,7 @@ h2 {
     color: white;
     position: relative;
     top: -62px;
-    left: 117px;
+    left: 127px;
     padding: 6px;
     margin-top: 10px;
     border-radius: 10px;
@@ -189,13 +220,35 @@ h2 {
     background-color: rgb(230, 0, 0);
 }
 
-#readme {
-    background-color: rgb(5, 100, 5);
-    margin-left: 80px;
+
+.button-wrap {
+    position: relative;
+    left: 25px;
+    top: -15px;
+}
+
+.button {
+    background-color: rgb(78, 148, 214);
+    color: aliceblue;
+    padding: 6px 10px;
+    border: 0;
+    border-radius: 7px;
+    font-size: 17px;
+    cursor: pointer;
+}
+
+.button:hover {
+    background-color: yellow;
     color: black;
 }
 
-#readme:hover {
-    background-color: rgb(51, 145, 51);
+#readme {
+    background-color: var(--green);
+    margin-left: 74px;
     color: white;
+}
+
+#readme:hover {
+    background-color: rgb(52, 255, 52);
+    color: black;
 }
