--- a/renderer/style.css
+++ b/renderer/style.css
@@ -1,8 +1,10 @@
 :root {
     --font-family: arial, sans-serif;
     --background-color: rgb(82, 82, 82);
+    --widget-color: rgb(73, 73, 73);
     --white: rgb(214, 214, 214);
     --green: rgb(36, 139, 36);
+    --red: rgb(211, 13, 13);
 }
 
 html, body {
@@ -43,13 +45,18 @@ html, body {
 #window-controls button {
     background-color: var(--background-color);
     border: none;
+    border-radius: 40%;
     color: white;
     padding: 10px;
     cursor: pointer;
 }
 
-#window-controls button:hover {
+#minimize-window:hover {
     background-color: #5f5f5f;
+}
+
+#close-window:hover {
+    background-color: var(--red);
 }
 
 h2 {
@@ -59,7 +66,7 @@ h2 {
 
 
 #status {
-    background-color: rgb(73, 73, 73);
+    background-color: var(--widget-color);
     padding: 8px;
     width: 90%;
     border-radius: 10px;
@@ -82,15 +89,15 @@ h2 {
 
 
 #rwydata {
-    color: red;
+    color: var(--red);
 }
 
 #config {
-    color: red;
+    color: var(--red);
 }
 
 #tokenStatus {
-    color: red;
+    color: var(--red);
 }
 
 .about {
@@ -138,7 +145,7 @@ h2 {
     position: static;
     color: var(--white);
     font-size: 20px;
-    background-color: rgb(73, 73, 73);
+    background-color: var(--widget-color);
     padding: 8px;
     border-radius: 10px;
 }
@@ -165,7 +172,7 @@ h2 {
 #FIRairportsTitle {
     color: white;
     position: static;
-    background-color: rgb(73, 73, 73);
+    background-color: var(--widget-color);
     padding: 8px;
     border-radius: 10px;
     width: 89%;
@@ -203,7 +210,7 @@ h2 {
 }
 
 #resetButton {
-    background-color: rgb(167, 0, 0);
+    background-color: var(--red);
     color: white;
     position: relative;
     top: -62px;
@@ -217,7 +224,8 @@ h2 {
 }
 
 #resetButton:hover {
-    background-color: rgb(230, 0, 0);
+    background-color: rgb(255, 32, 32);
+    color: black;
 }
 
 
