--- a/renderer/css/settings.css
+++ b/renderer/css/settings.css
@@ -18,7 +18,7 @@ html, body {
     position: relative;
     max-height: 500px;
     max-width: 600px;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 .container {
@@ -32,7 +32,7 @@ html, body {
 
 
 #title {
-    margin-top: 2px;
+    margin-top: 8px;
     position: relative;
     font-family: var(--font-family);
     color: var(--white);
@@ -50,24 +50,36 @@ html, body {
     flex-direction: column;
     justify-content: left;
     position: relative;
-    margin-top: -5%;
+    margin-top: 0%;
     margin-left: 10%;
     width: 90%;
 }
 
 .runwayinfo {
-    width: 100%;
+    position: relative;
+    left: 10%;
+    width: 75%;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin-top: 20px;
+    margin-top: 6px;
 }
 
 .inputgroup {
     color: var(--white);
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    gap: 30px;
     width: 80%;
+}
+
+#oacigroup {
+    gap: 2px;
+}
+
+.runwayinfo > h3 {
+    position: absolute;
+    left: -95px;
+    top: -25px;
 }
 
 input {
@@ -76,6 +88,8 @@ input {
     border-radius: 10px;
     border: 1px solid black;
     font-size: 11px;
+    position: relative;
+    top: -4px;
 }
 
 input[type="text"], input[type="number"] {
@@ -99,9 +113,8 @@ label {
 #has4runwaycheck {
     cursor: pointer;
     position: relative;
-    margin-top: 30px;
-    left: -32%;
-    top: -13px;
+    left: -5%;
+    transform: scale(1.3);
 }
 
 #submitbutton {
@@ -112,8 +125,9 @@ label {
     border-radius: 7px;
     font-size: 17px;
     cursor: pointer;
-    width: 90%;
-    margin-left: 0%;
+    width: 80%;
+    margin-left: 6%;
+    margin-top: 8%;
 }
 
 #submitbutton:hover {
