--- a/renderer/css/settings.css
+++ b/renderer/css/settings.css
@@ -237,14 +237,17 @@ label {
     transform: scale(1.3);
 }
 
-#submitbutton {
-    background-color: rgb(78, 148, 214);
-    color: aliceblue;
+.button {
     padding: 6px 10px;
+    cursor: pointer;
     border: 0;
     border-radius: 7px;
     font-size: 17px;
-    cursor: pointer;
+}
+
+#submitbutton {
+    background-color: rgb(78, 148, 214);
+    color: aliceblue;
     width: 80%;
     margin-left: 6%;
     margin-top: 8%;
@@ -253,4 +256,16 @@ label {
 #submitbutton:hover {
     background-color: yellow;
     color: black;
+}
+
+#closebutton {
+    background-color: rgb(121, 36, 36);
+    color: aliceblue;
+    width: 72%;
+    margin-left: 93px;
+    margin-top: 2px;
+}
+
+#closebutton:hover {
+    background-color: rgb(255, 8, 0);
 }
